Working on controller relation

--- a/libs/ItemEditor/tests/CMakeLists.txt
+++ b/libs/ItemEditor/tests/CMakeLists.txt
@@ -36,7 +36,6 @@ endfunction()
 addItemEditorTest("ItemSelectionModelTest")
 addItemEditorTest("RowChangeTest")
 addItemEditorTest("ActionsTest")
-addItemEditorTest("StandardWidgetsTest")
 addItemEditorTest("ItemDelegateTest")
 addItemEditorTest("ItemViewTest")
 addItemEditorTest("DataWidgetMapperTest")
@@ -45,4 +44,7 @@ addItemEditorTest("ItemViewPrivateContainerTest")
 addItemEditorTest("TableViewControllerTest")
 addItemEditorTest("WidgetMapperControllerTest")
 addItemEditorTest("ControllerRelationTest")
+addItemEditorTest("WindowTest")
+
+addItemEditorTest("StandardWidgetsTest")
 addItemEditorTest("TestEditorTest")
