In libs ItemModel and ItemEditor: working on primary key

--- a/libs/ItemModel/tests/CMakeLists.txt
+++ b/libs/ItemModel/tests/CMakeLists.txt
@@ -26,3 +26,5 @@ addItemModelTest("FilterProxyModelTest")
 addItemModelTest("RelationFilterProxyModelTest")
 addItemModelTest("SortProxyModelTest")
 addItemModelTest("ProxyModelContainerTest")
+addItemModelTest("KeyTest")
+addItemModelTest("RelationKeyTest")
