In lib ItemEditor: fixed bugs when inserting rows into model

--- a/libs/ItemEditor_Sql/examples/SqlClientEditor/CMakeLists.txt
+++ b/libs/ItemEditor_Sql/examples/SqlClientEditor/CMakeLists.txt
@@ -9,7 +9,7 @@ set(SOURCES_FILES
     src/Client.cpp
     src/Address.cpp
     src/ClientEditorSchema.cpp
-    src/AddressWidget.cpp
+    src/SqlAddressWidget.cpp
 )
 
 # Headers directories
