--- a/libs/ItemModel/CMakeLists.txt
+++ b/libs/ItemModel/CMakeLists.txt
@@ -7,7 +7,9 @@ project(multidiagtools)
 set(SOURCES_FILES
     src/Mdt/ItemModel/VariantTableModel.cpp
     src/Mdt/ItemModel/VariantTableModelItem.cpp
+    src/Mdt/ItemModel/Expression/FilterExpressionContainer.cpp
     src/Mdt/ItemModel/Expression/ComparisonEval.cpp
+    src/Mdt/ItemModel/Expression/GetRelationKeyForEquality.cpp
     src/Mdt/ItemModel/FilterExpression.cpp
     src/Mdt/ItemModel/FilterProxyModel.cpp
     src/Mdt/ItemModel/RelationFilterExpression.cpp
