In lib ItemModel: working on insertRow problem in RelationFilterProxyModel

--- a/libs/ItemModel/tests/CMakeLists.txt
+++ b/libs/ItemModel/tests/CMakeLists.txt
@@ -21,6 +21,7 @@ endfunction()
 #================= Tests ====================
 
 addItemModelTest("VariantTableModelTest")
+addItemModelTest("RowRangeTest")
 addItemModelTest("FilterExpressionTest")
 addItemModelTest("FilterProxyModelTest")
 addItemModelTest("RelationFilterProxyModelTest")
