--- a/libs/ItemModel/CMakeLists.txt
+++ b/libs/ItemModel/CMakeLists.txt
@@ -5,6 +5,7 @@ project(multidiagtools)
 
 # List of source files
 set(SOURCES_FILES
+    src/Mdt/ItemModel/RowRange.cpp
     src/Mdt/ItemModel/VariantTableModel.cpp
     src/Mdt/ItemModel/VariantTableModelItem.cpp
     src/Mdt/ItemModel/Expression/FilterExpressionContainer.cpp
