In lib ItemModel: new TestBase + SortFilterProxyModelTest

--- a/libs/ItemModel/tests/CMakeLists.txt
+++ b/libs/ItemModel/tests/CMakeLists.txt
@@ -4,6 +4,17 @@
 project(multidiagtools)
 enable_testing()
 
+#=============== ItemModel test library =====
+
+set(SOURCES_FILES
+    src/TestBase.cpp
+)
+
+add_library(mdtitemmodeltest SHARED ${SOURCES_FILES})
+target_link_libraries(mdtitemmodeltest "${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(mdtitemmodeltest "mdtapplication${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(mdtitemmodeltest Qt5::Test)
+
 #=============== Helper functions ===========
 
 # Add a test for this ItemModel lib
@@ -12,9 +23,10 @@ function(addItemModelTest testName)
   set(sourceFilePath "src/${testName}.cpp")
   string(TOLOWER ${complteTestName} executableName)
   add_executable(${executableName} ${sourceFilePath})
-  target_link_libraries(${executableName} "${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX}")
-  target_link_libraries(${executableName} "mdtapplication${MDTLIB_VERSION_SUFFIX}")
-  target_link_libraries(${executableName} Qt5::Test)
+  target_link_libraries(${executableName} "mdtitemmodeltest")
+#   target_link_libraries(${executableName} "${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX}")
+#   target_link_libraries(${executableName} "mdtapplication${MDTLIB_VERSION_SUFFIX}")
+#   target_link_libraries(${executableName} Qt5::Test)
   add_test(${complteTestName} ${CMAKE_CURRENT_BINARY_DIR}/${executableName})
 endfunction()
 
@@ -22,6 +34,7 @@ endfunction()
 
 addItemModelTest("VariantTableModelTest")
 addItemModelTest("RowRangeTest")
+addItemModelTest("SortFilterProxyModelTest")
 addItemModelTest("FilterExpressionTest")
 addItemModelTest("FilterProxyModelTest")
 addItemModelTest("RelationFilterProxyModelTest")
