--- a/libs/ItemModel/CMakeLists.txt
+++ b/libs/ItemModel/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SOURCES_FILES
     src/Mdt/ItemModel/RowRange.cpp
     src/Mdt/ItemModel/VariantTableModel.cpp
     src/Mdt/ItemModel/VariantTableModelItem.cpp
+    src/Mdt/ItemModel/SortFilterProxyModel.cpp
     src/Mdt/ItemModel/Expression/FilterExpressionContainer.cpp
     src/Mdt/ItemModel/Expression/ComparisonEval.cpp
     src/Mdt/ItemModel/Expression/GetRelationKeyForEquality.cpp
