In lib ItemModel: for RelationFilterProxyModel: implemented updating child model key data when edited in parent model

--- a/libs/ItemModel/CMakeLists.txt
+++ b/libs/ItemModel/CMakeLists.txt
@@ -21,6 +21,8 @@ set(SOURCES_FILES
     src/Mdt/ItemModel/ColumnSortStringAttributesList.cpp
     src/Mdt/ItemModel/SortProxyModel.cpp
     src/Mdt/ItemModel/ProxyModelContainer.cpp
+    src/Mdt/ItemModel/RowColumnListBase.cpp
+    src/Mdt/ItemModel/RowList.cpp
     src/Mdt/ItemModel/ColumnList.cpp
     src/Mdt/ItemModel/RelationKey.cpp
     src/Mdt/ItemModel/RelationKeyCopier.cpp
