--- a/libs/ItemModel/tests/CMakeLists.txt
+++ b/libs/ItemModel/tests/CMakeLists.txt
@@ -47,11 +47,13 @@ endfunction()
 addItemModelTest("qt5_tst_modeltest")
 addItemModelTest("VariantTableModelTest")
 addItemModelTest("RangeTest")
+addItemModelTest("ColumnFormatTest")
 addItemModelTest("SortFilterProxyModelTest")
 addItemModelTest("FilterExpressionTest")
 addItemModelTest("FilterProxyModelTest")
 addItemModelTest("RelationFilterProxyModelTest")
 addItemModelTest("SortProxyModelTest")
+addItemModelTest("FormatProxyModelTest")
 addItemModelTest("ProxyModelContainerTest")
 addItemModelTest("KeyTest")
 addItemModelTest("RelationKeyTest")
