In lib ItemModel: working on format maps

--- a/libs/ItemModel/tests/CMakeLists.txt
+++ b/libs/ItemModel/tests/CMakeLists.txt
@@ -47,7 +47,7 @@ endfunction()
 addItemModelTest("qt5_tst_modeltest")
 addItemModelTest("VariantTableModelTest")
 addItemModelTest("RangeTest")
-addItemModelTest("ColumnFormatTest")
+addItemModelTest("FormatMapTest")
 addItemModelTest("SortFilterProxyModelTest")
 addItemModelTest("FilterExpressionTest")
 addItemModelTest("FilterProxyModelTest")
