--- a/libs/ItemModel/CMakeLists.txt
+++ b/libs/ItemModel/CMakeLists.txt
@@ -9,6 +9,7 @@ set(SOURCES_FILES
     src/Mdt/ItemModel/RowRange.cpp
     src/Mdt/ItemModel/ColumnRange.cpp
     src/Mdt/ItemModel/ColumnFormatMapItem.cpp
+    src/Mdt/ItemModel/RowColumnFormatMapBase.cpp
     src/Mdt/ItemModel/ColumnFormatMap.cpp
     src/Mdt/ItemModel/VariantTableModel.cpp
     src/Mdt/ItemModel/VariantTableModelItem.cpp
