In lib ItemModel: implemented FormatMap

--- a/libs/ItemModel/CMakeLists.txt
+++ b/libs/ItemModel/CMakeLists.txt
@@ -8,6 +8,8 @@ set(SOURCES_FILES
     src/Mdt/ItemModel/Range.cpp
     src/Mdt/ItemModel/RowRange.cpp
     src/Mdt/ItemModel/ColumnRange.cpp
+    src/Mdt/ItemModel/IndexFormatMapItem.cpp
+    src/Mdt/ItemModel/IndexFormatMap.cpp
     src/Mdt/ItemModel/RowOrColumnFormatMapItem.cpp
     src/Mdt/ItemModel/RowColumnFormatMapBase.cpp
     src/Mdt/ItemModel/RowFormatMap.cpp
