--- a/libs/ItemModel/tests/CMakeLists.txt
+++ b/libs/ItemModel/tests/CMakeLists.txt
@@ -57,3 +57,4 @@ addItemModelTest("FormatProxyModelTest")
 addItemModelTest("ProxyModelContainerTest")
 addItemModelTest("KeyTest")
 addItemModelTest("RelationKeyTest")
+addItemModelTest("PkFkProxyModelTest")
