Working on primary key integration

--- a/libs/ItemEditor/tests/CMakeLists.txt
+++ b/libs/ItemEditor/tests/CMakeLists.txt
@@ -8,6 +8,7 @@ enable_testing()
 
 set(SOURCES_FILES
   src/ItemModelControllerTester.cpp
+  src/PrimaryKeyChangedSignalSpy.cpp
   src/ItemViewTestEdit.cpp
   src/TestTableEditionWidget.cpp
   src/TestFormEditionWidget.cpp
