Implemented adding child controller by getting PK/FK in AbstractController

--- a/libs/ItemEditor/tests/CMakeLists.txt
+++ b/libs/ItemEditor/tests/CMakeLists.txt
@@ -7,6 +7,7 @@ enable_testing()
 #================= Item/View test library ====================
 
 set(SOURCES_FILES
+  src/TestBase.cpp
   src/ItemModelControllerTester.cpp
   src/PrimaryKeyChangedSignalSpy.cpp
   src/ItemViewTestEdit.cpp
