In lib ItemEditor: created new WidgetEditablePropertyMap class

--- a/libs/ItemEditor/tests/CMakeLists.txt
+++ b/libs/ItemEditor/tests/CMakeLists.txt
@@ -41,6 +41,7 @@ addItemEditorTest("RowChangeTest")
 addItemEditorTest("ActionsTest")
 addItemEditorTest("ItemDelegateTest")
 addItemEditorTest("ItemViewTest")
+addItemEditorTest("WidgetEditablePropertyMapTest")
 addItemEditorTest("DataWidgetMapperTest")
 addItemEditorTest("ControllerTest")
 addItemEditorTest("ItemViewPrivateContainerTest")
