--- a/libs/ItemEditor/CMakeLists.txt
+++ b/libs/ItemEditor/CMakeLists.txt
@@ -21,6 +21,7 @@ set(SOURCES_FILES
     src/Mdt/ItemEditor/ItemViewPrivateContainer.cpp
     src/Mdt/ItemEditor/TableViewController.cpp
     src/Mdt/ItemEditor/MappedWidgetList.cpp
+    src/Mdt/ItemEditor/WidgetEditablePropertyMap.cpp
     src/Mdt/ItemEditor/DataWidgetMapper.cpp
     src/Mdt/ItemEditor/WidgetMapperController.cpp
     src/Mdt/ItemEditor/AbstractControllerRelation.cpp
