--- a/libs/ItemEditor/tests/CMakeLists.txt
+++ b/libs/ItemEditor/tests/CMakeLists.txt
@@ -42,6 +42,7 @@ addItemEditorTest("ActionsTest")
 addItemEditorTest("ItemDelegateTest")
 addItemEditorTest("ItemViewTest")
 addItemEditorTest("WidgetEditablePropertyMapTest")
+addItemEditorTest("WidgetStyleSheetTest")
 addItemEditorTest("DataWidgetMapperTest")
 addItemEditorTest("ControllerTest")
 addItemEditorTest("ItemViewPrivateContainerTest")
