In lib ItemEditor: changing ControllerStatePermission from static to polymorphic class

--- a/libs/ItemEditor/tests/CMakeLists.txt
+++ b/libs/ItemEditor/tests/CMakeLists.txt
@@ -38,6 +38,7 @@ endfunction()
 
 addItemEditorTest("ItemSelectionModelTest")
 addItemEditorTest("RowChangeTest")
+addItemEditorTest("ControllerStatePermissionTest")
 addItemEditorTest("ActionsTest")
 addItemEditorTest("ItemDelegateTest")
 addItemEditorTest("ItemViewTest")
