In lib ItemEditor: refactoring controller relation

--- a/libs/ItemEditor/CMakeLists.txt
+++ b/libs/ItemEditor/CMakeLists.txt
@@ -30,7 +30,11 @@ set(SOURCES_FILES
     src/Mdt/ItemEditor/WidgetMapperController.cpp
     src/Mdt/ItemEditor/AbstractControllerRelation.cpp
     src/Mdt/ItemEditor/ControllerRelationImplBase.cpp
+    
     src/Mdt/ItemEditor/ControllerRelation.cpp
+    
+    src/Mdt/ItemEditor/FilterControllerRelation.cpp
+    src/Mdt/ItemEditor/NavigationControllerRelation.cpp
     src/Mdt/ItemEditor/ControllerRelationList.cpp
     src/Mdt/ItemEditor/StandardEditorLayoutWidget.cpp
     
