In lib ItemEditor: refactoring controller relation

--- a/libs/ItemEditor/tests/CMakeLists.txt
+++ b/libs/ItemEditor/tests/CMakeLists.txt
@@ -51,6 +51,7 @@ addItemEditorTest("ItemViewPrivateContainerTest")
 addItemEditorTest("TableViewControllerTest")
 addItemEditorTest("WidgetMapperControllerTest")
 addItemEditorTest("ControllerRelationTest")
+addItemEditorTest("ControllerRelationListTest")
 addItemEditorTest("FilterControllerRelationTest")
 addItemEditorTest("NavigationControllerRelationTest")
 addItemEditorTest("WindowTest")
