In lib ItemEditor: various changes

--- a/libs/ItemEditor/CMakeLists.txt
+++ b/libs/ItemEditor/CMakeLists.txt
@@ -30,6 +30,7 @@ set(SOURCES_FILES
     src/Mdt/ItemEditor/DataWidgetMapper.cpp
     src/Mdt/ItemEditor/WidgetMapperControllerStatePermission.cpp
     src/Mdt/ItemEditor/WidgetMapperController.cpp
+    src/Mdt/ItemEditor/ControllerRelationStateMapper.cpp
     src/Mdt/ItemEditor/AbstractControllerRelation.cpp
     src/Mdt/ItemEditor/FilterControllerRelation.cpp
     src/Mdt/ItemEditor/NavigationControllerRelation.cpp
