--- a/libs/ItemEditor/tests/CMakeLists.txt
+++ b/libs/ItemEditor/tests/CMakeLists.txt
@@ -54,6 +54,7 @@ addItemEditorTest("ControllerRelationTest")
 addItemEditorTest("ControllerRelationListTest")
 addItemEditorTest("FilterControllerRelationTest")
 addItemEditorTest("NavigationControllerRelationTest")
+addItemEditorTest("AbstractEditorLayoutTest")
 addItemEditorTest("WindowTest")
 
 addItemEditorTest("StandardWidgetsTest")
