--- a/libs/ItemEditor/tests/CMakeLists.txt
+++ b/libs/ItemEditor/tests/CMakeLists.txt
@@ -40,6 +40,9 @@ endfunction()
 addItemEditorTest("ItemSelectionModelTest")
 addItemEditorTest("RowChangeTest")
 addItemEditorTest("ControllerStatePermissionTest")
+addItemEditorTest("ControllerStatePermissionProxyModelTest")
+addItemEditorTest("AbstractControllerStateChainTest")
+addItemEditorTest("ControllerStateMachineTest")
 addItemEditorTest("ActionsTest")
 addItemEditorTest("ItemDelegateTest")
 addItemEditorTest("ItemViewTest")
