--- a/libs/ItemEditor/tests/CMakeLists.txt
+++ b/libs/ItemEditor/tests/CMakeLists.txt
@@ -8,8 +8,11 @@ enable_testing()
 
 set(SOURCES_FILES
   src/TestBase.cpp
+  src/ControllerStateChainTestClass.cpp
+  src/ControllerStateMachineTestClass.cpp
   src/ItemModelControllerTester.cpp
   src/AbstractControllerRelationTestClass.cpp
+  src/ControllerStateChangedSignalSpy.cpp
   src/PrimaryKeyChangedSignalSpy.cpp
   src/ItemViewTestEdit.cpp
   src/TestTableEditionWidget.cpp
