In lib ItemEditor: working on controller state machine

--- a/libs/ItemEditor/CMakeLists.txt
+++ b/libs/ItemEditor/CMakeLists.txt
@@ -27,14 +27,19 @@ set(SOURCES_FILES
     src/Mdt/ItemEditor/AbstractItemModelController.cpp
     src/Mdt/ItemEditor/ItemViewPrivateContainer.cpp
     src/Mdt/ItemEditor/TableViewControllerStatePermission.cpp
+    src/Mdt/ItemEditor/TableViewControllerStateTable.cpp
     src/Mdt/ItemEditor/TableViewController.cpp
     src/Mdt/ItemEditor/MappedWidgetList.cpp
     src/Mdt/ItemEditor/WidgetEditablePropertyMap.cpp
     src/Mdt/ItemEditor/WidgetStyleSheet.cpp
     src/Mdt/ItemEditor/DataWidgetMapper.cpp
     src/Mdt/ItemEditor/WidgetMapperControllerStatePermission.cpp
+    src/Mdt/ItemEditor/WidgetMapperControllerStateTable.cpp
     src/Mdt/ItemEditor/WidgetMapperController.cpp
+    
     src/Mdt/ItemEditor/ControllerRelationStateMapper.cpp
+    
+    src/Mdt/ItemEditor/ControllerRelationEventMapper.cpp
     src/Mdt/ItemEditor/AbstractControllerRelation.cpp
     src/Mdt/ItemEditor/FilterControllerRelation.cpp
     src/Mdt/ItemEditor/NavigationControllerRelation.cpp
