--- a/libs/ItemEditor/tests/CMakeLists.txt
+++ b/libs/ItemEditor/tests/CMakeLists.txt
@@ -10,6 +10,8 @@ set(SOURCES_FILES
   src/TestBase.cpp
   src/ItemModelControllerTester.cpp
   src/AbstractControllerRelationTestClass.cpp
+  src/RowStateChangedSpy.cpp
+  src/CurrentRowChangedSpy.cpp
   src/ControllerStateChangedSignalSpy.cpp
   src/PrimaryKeyChangedSignalSpy.cpp
   src/ItemViewTestEdit.cpp
