In lib ItemEditor: working on new TableViewControllerImplementation

--- a/libs/ItemEditor/tests/CMakeLists.txt
+++ b/libs/ItemEditor/tests/CMakeLists.txt
@@ -50,6 +50,7 @@ addItemEditorTest("WidgetStyleSheetTest")
 addItemEditorTest("DataWidgetMapperTest")
 addItemEditorTest("ControllerTest")
 addItemEditorTest("ItemViewPrivateContainerTest")
+addItemEditorTest("TableViewControllerImplementationTest")
 addItemEditorTest("TableViewControllerTest")
 addItemEditorTest("WidgetMapperControllerTest")
 addItemEditorTest("ControllerRelationTest")
