In lib ItemEditor_Sql: fixes to compile with modifications made in ItemEditor + refactoring in unit tests

--- a/libs/ItemEditor_Sql/tests/CMakeLists.txt
+++ b/libs/ItemEditor_Sql/tests/CMakeLists.txt
@@ -13,6 +13,7 @@ set(SOURCES_FILES
   src/Schema/Address.cpp
   src/Schema/ClientAddressSchema.cpp
   src/Schema/ClientPopulation.cpp
+  src/SqlTestBase.cpp
 )
 
 add_library(mdtitemeditorsqltest SHARED ${SOURCES_FILES})
