In libs ItemEditor*: bugfixes: DataWidgetMapper set a empty string (expected a null QVariant) to model, DataWidgetMapper not updating if model has a null QVariant

--- a/libs/ItemEditor/CMakeLists.txt
+++ b/libs/ItemEditor/CMakeLists.txt
@@ -33,6 +33,7 @@ set(SOURCES_FILES
     src/Mdt/ItemEditor/MappedWidgetList.cpp
     src/Mdt/ItemEditor/WidgetEditablePropertyMap.cpp
     src/Mdt/ItemEditor/WidgetStyleSheet.cpp
+    src/Mdt/ItemEditor/DataWidgetMapperItemDelegate.cpp
     src/Mdt/ItemEditor/DataWidgetMapper.cpp
     src/Mdt/ItemEditor/WidgetMapperControllerStatePermission.cpp
     src/Mdt/ItemEditor/WidgetMapperControllerStateTable.cpp
