--- a/libs/ItemEditor/tests/CMakeLists.txt
+++ b/libs/ItemEditor/tests/CMakeLists.txt
@@ -27,7 +27,7 @@ target_link_libraries(mdtitemeditortest Qt5::Test)
 
 # Add a test for this ItemEditor lib
 function(addItemEditorTest testName)
-  set(complteTestName "MdtItemEditor${testName}")
+  set(complteTestName "MdtItemEditor_${testName}")
   set(sourceFilePath "src/${testName}.cpp")
   string(TOLOWER ${complteTestName} executableName)
   add_executable(${executableName} ${sourceFilePath})
@@ -47,6 +47,7 @@ addItemEditorTest("ItemDelegateTest")
 addItemEditorTest("ItemViewTest")
 addItemEditorTest("WidgetEditablePropertyMapTest")
 addItemEditorTest("WidgetStyleSheetTest")
+addItemEditorTest("DataWidgetMapperItemDelegateTest")
 addItemEditorTest("DataWidgetMapperTest")
 addItemEditorTest("ControllerTest")
 addItemEditorTest("ItemViewPrivateContainerTest")
