--- a/libs/ItemModel/tests/CMakeLists.txt
+++ b/libs/ItemModel/tests/CMakeLists.txt
@@ -58,4 +58,5 @@ addItemModelTest("ProxyModelContainerTest")
 addItemModelTest("KeyTest")
 addItemModelTest("RelationKeyTest")
 addItemModelTest("PkFkProxyModelTest")
+addItemModelTest("PrimaryKeyProxyModelTest")
 addItemModelTest("ForeignKeyProxyModelTest")
