--- a/libs/ItemEditor/tests/CMakeLists.txt
+++ b/libs/ItemEditor/tests/CMakeLists.txt
@@ -51,6 +51,7 @@ addItemEditorTest("DataWidgetMapperItemDelegateTest")
 addItemEditorTest("DataWidgetMapperTest")
 addItemEditorTest("ControllerTest")
 addItemEditorTest("ItemViewPrivateContainerTest")
+addItemEditorTest("ForeignKeyColumnVisibilityMapTest")
 addItemEditorTest("TableViewControllerImplementationTest")
 addItemEditorTest("TableViewControllerTest")
 addItemEditorTest("WidgetMapperControllerTest")
