--- a/libs/Expected/CMakeLists.txt
+++ b/libs/Expected/CMakeLists.txt
@@ -3,15 +3,20 @@
 # Project
 project(multidiagtools)
 
-# Headers directories
-include_directories("${CMAKE_CURRENT_SOURCE_DIR}/src")
+# List of source files
+set(SOURCES_FILES 
+    src/Mdt/Expected.cpp
+)
 
 # Output library name
 set(LIBRARY_NAME "Expected")
-
-# Output library technical names
 string(TOLOWER ${LIBRARY_NAME} LIBRARY_NAME_LC)
 set(LIBRARY_BIN_NAME "mdt${LIBRARY_NAME_LC}")
+
+add_library(${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX} SHARED ${SOURCES_FILES})
+target_link_libraries(${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX} mdterror${MDTLIB_VERSION_SUFFIX})
+
+target_include_directories(${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>)
 
 # Headers to install
 file(GLOB INSTALL_HEADERS *.h)
