--- a/libs/Expected/tests/CMakeLists.txt
+++ b/libs/Expected/tests/CMakeLists.txt
@@ -7,5 +7,6 @@ enable_testing()
 # Target MdtExpectedTest
 add_executable(mdtexpectedtest src/ExpectedTest.cpp)
 add_test(MdtExpectedTest ${CMAKE_CURRENT_BINARY_DIR}/mdtexpectedtest)
+target_link_libraries(mdtexpectedtest "mdtexpected${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtexpectedtest "mdtapplication${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtexpectedtest Qt5::Test)
