In lib Expected: CMake config migration + bug corrections

--- a/libs/Expected/tests/CMakeLists.txt
+++ b/libs/Expected/tests/CMakeLists.txt
@@ -1,12 +1,11 @@
-# CMake project file for Multi Diag Tools
 
-# Project
-project(multidiagtools)
 enable_testing()
+
+find_package(Qt5
+  COMPONENTS Test
+)
 
 # Target MdtExpectedTest
 add_executable(mdtexpectedtest src/ExpectedTest.cpp)
 add_test(MdtExpectedTest ${CMAKE_CURRENT_BINARY_DIR}/mdtexpectedtest)
-target_link_libraries(mdtexpectedtest "mdtexpected${MDTLIB_VERSION_SUFFIX}")
-target_link_libraries(mdtexpectedtest "mdtapplication${MDTLIB_VERSION_SUFFIX}")
-target_link_libraries(mdtexpectedtest Qt5::Test)
+target_link_libraries(mdtexpectedtest Expected Application Qt5::Test)
