--- a/libs/Expected/CMakeLists.txt
+++ b/libs/Expected/CMakeLists.txt
@@ -1,26 +1,3 @@
-# Project file for Multi Diag Tools
 
-# Project
-project(multidiagtools)
-
-# List of source files
-set(SOURCES_FILES 
-    src/Mdt/Expected.cpp
-)
-
-# Output library name
-set(LIBRARY_NAME "Expected")
-string(TOLOWER ${LIBRARY_NAME} LIBRARY_NAME_LC)
-set(LIBRARY_BIN_NAME "mdt${LIBRARY_NAME_LC}")
-
-add_library(${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX} SHARED ${SOURCES_FILES})
-target_link_libraries(${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX} mdterror${MDTLIB_VERSION_SUFFIX})
-
-target_include_directories(${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>)
-
-# Headers to install
-file(GLOB INSTALL_HEADERS *.h)
-install(FILES ${INSTALL_HEADERS} DESTINATION "${HEADERS_DEST_DIR}/Mdt/${LIBRARY_NAME}" COMPONENT dev)
-
-# Unit tests
-add_subdirectory("tests")
+add_subdirectory(src)
+add_subdirectory(tests)
